Fixes broken header alignment

--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -18,6 +18,10 @@ p, h1, h2, h3, h4, legend {
   color: $black-text;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  text-align: center;
+}
+
 .intro-text {
     padding-bottom: 1.25rem;
     margin-bottom: 1.25rem;
